Recovering the final version of the tappy loaders
Co-authored-by: Swee Loke <sweeloke@gmail.com>

--- a/colab_notebooks/01_downloading.ipynb
+++ b/colab_notebooks/01_downloading.ipynb
@@ -54,6 +54,7 @@
         "\n",
         "# Going to the home directory and loading the project setup\n",
         "% cd '$HOME_DIR'\n",
+        "! git fetch origin && git reset --hard origin/master\n",
         "from util.project_setup import ProjectSetup"
       ],
       "execution_count": 1,
