--- a/colab_notebooks/04_pipeline_and_models.ipynb
+++ b/colab_notebooks/04_pipeline_and_models.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "04_pipeline_and_models_V3.ipynb",
+      "name": "04_pipeline_and_models.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": []
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "q0PdFiA9H64T",
         "colab_type": "code",
-        "outputId": "7640d705-5e11-4bee-efa2-44f74d26ac27",
+        "outputId": "f466de31-c452-4cf5-d58e-d5f3bbbd54a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -87,12 +87,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "fjse-eT-8BTD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Uqe2WN5lMsnB",
         "colab_type": "code",
-        "outputId": "7e31cefb-77b9-4b0b-9570-cb5093b01167",
+        "outputId": "d708116d-8d50-4161-8c8b-30bb35d14794",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86
+          "height": 103
         }
       },
       "source": [
@@ -109,7 +122,8 @@
         "print(\"Parkinsons:\\n\", df['parkinsons'].value_counts())\n",
         "\n",
         "y = df.parkinsons\n",
-        "X = df.drop('parkinsons', axis=1)"
+        "X = df.drop('parkinsons', axis=1)\n",
+        "print(X.shape)"
       ],
       "execution_count": 2,
       "outputs": [
@@ -119,7 +133,8 @@
             "Parkinsons:\n",
             " True     43\n",
             "False    41\n",
-            "Name: parkinsons, dtype: int64\n"
+            "Name: parkinsons, dtype: int64\n",
+            "(84, 30)\n"
           ],
           "name": "stdout"
         }
@@ -130,7 +145,7 @@
       "metadata": {
         "id": "nNeQp_qQKR21",
         "colab_type": "code",
-        "outputId": "ddb620ce-d542-413d-844d-ede051158fd6",
+        "outputId": "3eb81a51-6e34-4d76-804d-18d9996df892",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
@@ -139,8 +154,8 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "# Spliting with 20% on the test set - as we don't have lots of data, if we keep more for test, we can't train\n",
-        "# good models\n",
+        "# Spliting with 20% for the test set - as we don't have lots of data, if we keep more for test, we can't train\n",
+        "# good models \n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=RANDOM_SEED, stratify=y)\n",
         "\n",
         "print(\"Parkinsons:\\n\", y_train.value_counts())"
@@ -482,7 +497,7 @@
       "metadata": {
         "id": "wsSAaVkDDlBj",
         "colab_type": "code",
-        "outputId": "26130f46-1d32-4ea3-e61f-ff238d414fcc",
+        "outputId": "35dbef3a-3d40-4978-de65-fc76ac026a45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -528,11 +543,6 @@
         "    'clf__estimator__criterion':    ['entropy'],\n",
         "    'clf__estimator__max_depth':    [2],\n",
         "  },   \n",
-        " \n",
-        "#   {\n",
-        "#     'clf__estimator': [GradientBoostingClassifier()],\n",
-        "#     'clf__estimator__random_state': [RANDOM_SEED],\n",
-        "#   },\n",
         "  #  GradientBoostingClassifier has tuned parameters   \n",
         "  {\n",
         "    'clf__estimator': [GradientBoostingClassifier()],\n",
@@ -542,12 +552,7 @@
         "    'clf__estimator__n_estimators' : [100],\n",
         "    'clf__estimator__max_depth' : [5],\n",
         "    'clf__estimator__max_features' :['auto']\n",
-        "  },   \n",
-        "#   {    \n",
-        "#     'clf__estimator': [XGBClassifier()],\n",
-        "#     'clf__estimator__random_state':      [RANDOM_SEED],\n",
-        "#   },\n",
-        "    \n",
+        "  },       \n",
         "  # XGBClassifier with tuned parameters\n",
         "  {\n",
         "    'clf__estimator': [XGBClassifier()],\n",
@@ -578,7 +583,6 @@
         "\n",
         "# We use the mean_score of cross_validation to select models because we have very few samples in the dataset and if we split further\n",
         "# for test, model_sel, test, we won't be able to train the model properly.\n",
-        "# best_models1, grid_search1 = train_models_and_select_best(X_train, y_train, X_test, y_test, training_pipeline, param_grid_all_features, cv=CV_COUNT, scoring=SCORING_METRICS)\n",
         "\n",
         "# find the best n models \n",
         "best_models1, grid_search1 = train_and_select_any_top_n(X_train, y_train,training_pipeline, param_grid_all_features, cv=CV_COUNT, scoring=SCORING_METRICS)"
@@ -707,7 +711,7 @@
       "metadata": {
         "id": "MDVdY0HY3emA",
         "colab_type": "code",
-        "outputId": "7727b72a-0f9f-45ff-84f7-d9a3b40e88e7",
+        "outputId": "a5cb87d8-18a1-402b-d974-b55f616e3b16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
